--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valorantle</title>
+    <title>Valordle</title>
     <link rel="icon" href="https://images.cults3d.com/4QqRV9kLYYEuw9ur_X3yjQl1sjk=/516x516/https://files.cults3d.com/uploaders/15024335/illustration-file/a86d53e4-2bd9-4a8f-9550-986686c3131a/gi0mAjIh_400x400.png">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet"/>
@@ -14,10 +14,10 @@
     />
 </head>
 <body>
-    <h1> Valorantle </h1>
+    <h1> Valordle </h1>
 
     <!-- <div class="wrapper">
-        <input type="text" id="name" name="name">
+        <input type="text" id="playername" name="playerName">
     </div> -->
     
     <div id="game-board">
